# uoh-ay26-AirLLM

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: experiment.yaml
docs/: ARCHITECTURE.md  PLAN.md  PRD.md  PRD_airllm_pipeline.md  PRD_benchmarking.md  PRD_quantization.md  PROMPTS.md  REPORT.md  TODO.md
results/processed/: comparison_table.csv
scripts/: generate_report.py  run_airllm.py  run_baseline.py  run_quantized.py
src/airllm_ex05/: __init__.py  benchmark.py  cli.py  config.py  constants.py  cost_analysis.py  hardware.py  metrics.py  models.py  plotting.py  report.py
src/airllm_ex05/runners/: __init__.py  airllm_runner.py  baseline_runner.py  common.py  quantized_runner.py
src/airllm_ex05/shared/: __init__.py  logging_utils.py  paths.py  validation.py
tests/: fake_model_deps.py  test_benchmark.py  test_cli.py  test_config.py  test_cost_analysis.py  test_hardware.py  test_metrics.py  test_misc_coverage.py  test_plotting.py  test_quantized_guard.py  test_report.py  test_runners.py  test_shared_utils.py
