[project]
name = "airllm-ex05"
version = "0.1.0"
description = "Exercise 05 local LLM benchmarking with AirLLM, quantization, and cost analysis."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "matplotlib>=3.8",
  "pandas>=2.2",
  "psutil>=5.9",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "torch>=2.2",
]

[project.optional-dependencies]
models = [
  "accelerate>=0.30",
  "airllm>=2.11",
  "bitsandbytes>=0.43; platform_system != 'Windows'",
  "transformers>=4.42",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
airllm-ex05 = "airllm_ex05.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201", "ANN001"]

[tool.pytest.ini_options]
addopts = "--cov=airllm_ex05 --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
pythonpath = ["src"]
